--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -1,40 +1,45 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'Walden'
+baseURL = "https://example.org/"
+languageCode = "en-us"
+title = "Walden"
 
-theme = 'hugo-theme-2025'
-copyright = 'All rights reserved'
+theme = "hugo-theme-2025"
+copyright = "All rights reserved"
 
 [params]
-  author = 'Homecat'
-  theme = 'light'
+  author = "Homecat"
+  theme = "light"
 
 [menus]
   [[menus.main]]
-    name = 'Home'
+    name = "Home"
     identifier = "home"
-    pageRef = '/'
+    pageRef = "/"
     weight = 10
   [[menus.main]]
-    name = 'Blog'
+    name = "Blog"
     identifier = "blog"
-    pageRef = '/blog'
+    pageRef = "/blog"
     weight = 20
   [[menus.main]]
-    name = 'Docs'
+    name = "Docs"
     identifier = "docs"
-    pageRef = '/docs'
+    pageRef = "/docs"
     weight = 30
 
+  [[menus.social]]
+    name = "Github"
+    pre = "bi bi-github"
+    url = "https://github.com/homecat805"
+    weight = 10
 
 [taxonomies]
-  category = 'categories'
-  tag = 'tags'
-  series = 'series'
+  category = "categories"
+  tag = "tags"
+  series = "series"
 
 # 用于渲染的参数
 [markup]
-    defaultMarkdownHandler = 'goldmark'
+    defaultMarkdownHandler = "goldmark"
     [markup.goldmark.renderer]
         unsafe = true
 
