--- a/theme.toml
+++ b/theme.toml
@@ -1,31 +1,31 @@
-name = 'Theme name'
+name = 'Hugo Theme 2025'
 license = 'MIT'
-licenselink = 'https://github.com/owner/repo/LICENSE'
+licenselink = 'https://github.com/Homecat805/hugo-theme-2025/LICENSE'
 description = 'Theme description'
 
 # The home page of the theme, where the source can be found
-homepage = 'https://github.com/owner/repo'
+homepage = 'https://genway.com.cn/'
 
 # If you have a running demo of the theme
-demosite = 'https://owner.github.io/repo'
+demosite = 'https://genway.com.cn/'
 
 # Taxonomy terms
-tags = ['blog', 'company']
-features = ['some', 'awesome', 'features']
+tags = ['blog', 'document']
+features = ['responsive', 'original']
 
 # If the theme has multiple authors
-authors = [
-  {name = 'Name of author', homepage = 'Website of author'},
-  {name = 'Name of author', homepage = 'Website of author'}
-]
+# authors = [
+#   {name = 'Name of author', homepage = 'Website of author'},
+#   {name = 'Name of author', homepage = 'Website of author'}
+# ]
 
 # If the theme has a single author
 [author]
-  name = 'Your name'
-  homepage = 'Your website'
+  name = 'Homecat'
+  homepage = 'https://genway.com.cn/'
 
 # If porting an existing theme
-[original]
-  author = 'Name of original author'
-  homepage = 'Website of original author'
-  repo = 'https://github.com/owner/repo'
+# [original]
+#   author = 'Name of original author'
+#   homepage = 'Website of original author'
+#   repo = 'https://github.com/owner/repo'
