--- a/theme.toml
+++ b/theme.toml
@@ -1,6 +1,6 @@
 name = 'Hugo Theme 2025'
 license = 'MIT'
-licenselink = 'https://github.com/Homecat805/hugo-theme-2025/LICENSE'
+licenselink = 'https://github.com/Homecat805/hugo-theme-2025?tab=MIT-1-ov-file'
 description = 'Theme description'
 
 # The home page of the theme, where the source can be found
